# wdseds

./: pyproject.toml  readme.md
sed_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: age_util.py  data.py  extinction.csv  fitting.py  likelihoods.py  measureages.py  photometry.py  plotting.py  sed_util.py
tests/: out.csv  sample_vincent_dz_massive.csv
