[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sed-tool"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
fit-seds          = "sedtool.fitting:main"
measure-ages      = "sedtool.measureages:main"
download-mist-data = "sedtool.data:_download_cli"

[tool.setuptools]
packages = ["sedtool"]

[tool.setuptools.package-dir]
sedtool = "src"

[tool.setuptools.package-data]
sedtool = ["extinction.csv"]
